--- a/package.json
+++ b/package.json
@@ -5,12 +5,18 @@
   "dependencies": {
     "axios": "^0.18.0",
     "moment": "^2.21.0",
+    "normalizr": "^3.2.4",
+    "query-string": "^6.0.0",
+    "ramda": "^0.25.0",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
     "react-redux": "^5.0.7",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "redux": "^3.7.2",
-    "redux-actions": "^2.3.0"
+    "redux-actions": "^2.3.0",
+    "reselect": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
