--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "classnames": "^2.2.5",
+    "history": "^4.7.2",
     "moment": "^2.21.0",
     "normalizr": "^3.2.4",
     "query-string": "^6.0.0",
-    "ramda": "^0.25.0",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
     "react-redux": "^5.0.7",
-    "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.1",
+    "react-router-redux": "^5.0.0-alpha.9",
     "redux": "^3.7.2",
     "redux-actions": "^2.3.0",
     "reselect": "^3.0.1"
@@ -25,6 +25,8 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "prop-types": "^15.6.1",
+    "react-scripts": "1.1.1",
     "redux-devtools-extension": "^2.13.2"
   }
 }
