--- a/package.json
+++ b/package.json
@@ -25,8 +25,12 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "prop-types": "^15.6.1",
     "react-scripts": "1.1.1",
-    "redux-devtools-extension": "^2.13.2"
+    "react-test-renderer": "^16.3.0",
+    "redux-devtools-extension": "^2.13.2",
+    "url-search-params-polyfill": "^3.0.0"
   }
 }
